c4prj1_deck/grade.txt
Grading at Wed Jan  8 23:04:51 UTC 2020
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘compare_hands’:
eval.c:220:1: error: ISO C forbids nested functions [-Werror=pedantic]
 int valuesEqual(card_t * first, card_t * second)
 ^
eval.c:225:1: error: ISO C forbids nested functions [-Werror=pedantic]
 unsigned * get_match_counts(deck_t * hand)
 ^
eval.c: In function ‘get_match_counts’:
eval.c:231:22: error: expected ‘,’ or ‘;’ before ‘j’
     for(size_t j = 0 j < hand->n_cards; ++j)
                      ^
eval.c:231:44: error: expected ‘;’ before ‘)’ token
     for(size_t j = 0 j < hand->n_cards; ++j)
                                            ^
eval.c:233:39: error: ‘hands’ undeclared (first use in this function)
       if((valuesEqual(hand->cards[i], hands->cards[j])) ++count;
                                       ^
eval.c:233:39: note: each undeclared identifier is reported only once for each function it appears in
eval.c:233:59: error: expected ‘)’ before ‘count’
       if((valuesEqual(hand->cards[i], hands->cards[j])) ++count;
                                                           ^
eval.c:234:5: error: expected expression before ‘}’ token
     }
     ^
eval.c: In function ‘compare_hands’:
eval.c:249:1: error: ISO C forbids nested functions [-Werror=pedantic]
 void copy_straight(card_t ** to, deck_t *from, size_t ind, suit_t fs, size_t count)
 ^
eval.c:275:1: error: ISO C forbids nested functions [-Werror=pedantic]
 int find_straight(deck_t * hand, suit_t fs, hand_eval_t * ans) {
 ^
eval.c:305:1: error: ISO C forbids nested functions [-Werror=pedantic]
 hand_eval_t evaluate_hand(deck_t * hand) {
 ^
eval.c:371:1: error: expected declaration or statement at end of input
 }
 ^
eval.c:371:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of eval.c failed

Overall Grade: F
